infrastructure/k8s/services/eventbus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventbus-srv
spec:
  type: ClusterIP
  selector:
    app: eventbus
  ports:
    - name: eventbus
      protocol: TCP
      port: 4005
      targetPort: 4005
